<?xml version="1.0" encoding="utf-8" ?>
    <resources>
    <string name="app_name">ContentProviderTest</string>
    <string name="action_settings">Settings</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="add">Add a new Birthday</string>
    <string name="show">Show all the Birthdays</string>
    <string name="delete">Delete all the Birthdays</string>
</resources>